# guessthedis

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
guessthedis/: __init__.py  __main__.py  state.py  terminal.py  test_functions.py
tests/: test_main.py  test_state.py
